# confidential-assets-wasm

./: .gitignore  Cargo.toml  DEVELOPMENT.md  QUICKSTART.md  README.md  build.sh  build_with_rust_client.sh  package.json
examples/: basic-keys.html  node-example-account-leaf-path-and-root.js  node-example-asset-leaf-path-and-root.js  node-example-get-leaf.js  node-example-keys.js  node-example-multi-leg.js  node-example.js
src/: account.rs  asset.rs  client.rs  curve_tree.rs  error.rs  keys.rs  lib.rs  settlement.rs  utils.rs
src/client/: curve_tree.rs  signer.rs
src/settlement/: leg.rs
tests/: wasm_tests.rs
